Eventos de socket io

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,8 +10,8 @@
 
     <!-- Importar archivo del socket -->
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        const socket = io();
-    </script>
+    <script src="/js/index.js"></script>
+
+    
 </body>
 </html>
