Emisiones y recibir por parte del servidor y cliente

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Work it"</h1>
+    <p id="text"></p>
+    <button id="emit-to-server">Click on me</button>
+    <button id="emit-to-last">Saludar</button>
 
     <!-- Importar archivo del socket -->
     <script src="/socket.io/socket.io.js"></script>
