--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Servidor websocket</title>
 </head>
 <body>
-    <h1>Work it"</h1>
-    <p id="text"></p>
-    <button id="emit-to-server">Click on me</button>
-    <button id="emit-to-last">Saludar</button>
+   
+    <div id="circle">
+
+    </div>
 
     <!-- Importar archivo del socket -->
     <script src="/socket.io/socket.io.js"></script>
